@@ -12,7 +12,6 @@ import org.springframework.security.oauth2.core.OAuth2AuthenticationException;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -26,48 +25,63 @@ public class OAuth2UserService extends DefaultOAuth2UserService {
     @Override
     public OAuth2User loadUser(OAuth2UserRequest oAuth2UserRequest) throws OAuth2AuthenticationException {
         String provider = oAuth2UserRequest.getClientRegistration().getClientName();
-        Map<String, Object> userInfo;
+        Map<String, Object> userInfo = super.loadUser(oAuth2UserRequest).getAttributes();
 
         try {
-            if (provider.equalsIgnoreCase("Naver")) {
-                userInfo = (Map<String, Object>) (super.loadUser(oAuth2UserRequest).getAttributes()).get("response");
-            } else {
-                userInfo = super.loadUser(oAuth2UserRequest).getAttributes();
-            }
-
-            validateAttributes(userInfo);
-
-            Member member = new Member();
-            member.setEmail((String) userInfo.get("email"));
-            member.setName((String) userInfo.get("name"));
-            member.setPassword(null);
-            member.setProvider(provider);
-
-            if (memberService.existingByEmail(member.getEmail())) {
-                checkExistingMember(member);
-            } else {
-                memberService.registerMember(member);
-            }
-
-            List<GrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_MEMBER"));
+            Member member = validateAttributes(userInfo, provider);
+            findOrCreateMember(member);
+            List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_MEMBER"));
             return new UserPrincipal(member, authorities, userInfo);
         } catch (Exception e) {
-            log.error("OAuth2UserService error: {}", e.getMessage());
-            throw new OAuth2AuthenticationException("OAuth2 user service error");
+            log.error("OAuth2UserService error: {}", e.getMessage(), e);
+            throw new OAuth2AuthenticationException("OAuth2 user service error: " + e.getMessage());
         }
     }
 
-    public void validateAttributes(Map<String, Object> attributes) {
-        if (!attributes.containsKey("email") || !attributes.containsKey("name")) {
-            throw new OAuth2AuthenticationException("서드파티 응답에 email 또는 name이 존재하지 않습니다.");
+    private Member validateAttributes(Map<String, Object> userInfo, String provider) {
+        if (provider.equalsIgnoreCase("Naver")) {
+            return validateNaverAttributes(userInfo);
+        } else if (provider.equalsIgnoreCase("Kakao")) {
+            return validateKakaoAttributes(userInfo);
+        } else {
+            throw new OAuth2AuthenticationException("Unsupported provider: " + provider);
         }
     }
 
-    public void checkExistingMember(Member member) {
+    private Member validateNaverAttributes(Map<String, Object> userInfo) {
+        userInfo = (Map<String, Object>) userInfo.get("response");
+        if (!userInfo.containsKey("email") || !userInfo.containsKey("name")) {
+            throw new OAuth2AuthenticationException("Naver 응답에 필수 속성이 존재하지 않습니다.");
+        }
+        Member member = new Member();
+        member.setProvider("Naver");
+        member.setEmail((String) userInfo.get("email"));
+        member.setName((String) userInfo.get("name"));
+        return member;
+    }
+
+    private Member validateKakaoAttributes(Map<String, Object> userInfo) {
+        userInfo = (Map<String, Object>) userInfo.get("kakao_account");
+        if (!userInfo.containsKey("email") || !userInfo.containsKey("profile")) {
+            throw new OAuth2AuthenticationException("Kakao 응답에 필수 속성이 존재하지 않습니다.");
+        }
+        Member member = new Member();
+        member.setProvider("Kakao");
+        member.setEmail((String) userInfo.get("email"));
+        Map<String, Object> profile = (Map<String, Object>) userInfo.get("profile");
+        member.setName((String) profile.get("nickname"));
+        return member;
+    }
+
+    private void findOrCreateMember(Member member) {
         Member existingMember = memberService.findByEmail(member.getEmail());
-        if (!existingMember.getProvider().equalsIgnoreCase(member.getProvider())) {
-            log.error("이미 가입된 이메일입니다...");
-            throw new OAuth2AuthenticationException("이미 가입된 이메일입니다. 이메일로 로그인해주세요.");
+        if (existingMember != null) {
+            if (!existingMember.getProvider().equalsIgnoreCase(member.getProvider())) {
+                log.error("이미 가입된 이메일입니다...");
+                throw new OAuth2AuthenticationException("이미 가입된 이메일입니다. 이메일로 로그인해주세요.");
+            }
+        } else {
+            memberService.registerMember(member);
         }
     }
 
